# patch1337

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  python_linting.yml  security.yml
patch1337/: patch1337.py
