[build-system]
requires = ["setuptools>=65.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch1337"
description = "Patches files using .1337 patch files"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["1337", "patch", "nvidia",]
authors = [{name = "OMEGA_RAZER"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.1.3",
    "loguru>=0.6.0",
]
dynamic = ["version"]

[tool.setuptools]
dynamic = {"version" = {attr = 'patch1337.patch1337.__version__'}}
packages = ["patch1337",]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "pre-commit>=3.1.1",
    "refurb>=1.14.0",
    "ruff>=0.0.255",
]

[project.scripts]
patch1337 = "patch1337.patch1337:main"

[tool.black]
preview = true
line-length = 120

[tool.flake8]
max-line-length = 120
show-source = true
statistics = true

[tool.isort]
profile = "black"
py_version = 39
multi_line_output = 3
line_length = 120
indent = 4

[tool.mypy]
python_version = "3.9"
show_column_numbers = true
show_error_context = true

[tool.refurb]
python_version = "3.9"

[tool.ruff]
exclude = []
flake8-annotations = {"suppress-dummy-args" = true}
ignore = ["D203", "D212", "INP", "PLE1205", "PLR0915"]
line-length = 120
select = ["ALL"]
show-fixes = true
show-source = true
target-version = "py39"
